--- a/server/.env.prod
+++ b/server/.env.prod
@@ -1,3 +1,3 @@
-POSTGRES_URL=postgresql://neondb_owner:npg_8AnyKFUpR7jC@ep-mute-heart-a160dkg2-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
 DEBUG=0
-
+POSTGRES_URL=postgresql://neondb_owner:npg_8AnyKFUpR7jC@ep-mute-heart-a160dkg2-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+SECRET_KEY = 'django-insecure-qyju41oh!ail0(1#$tsue#j0gdgu@+oj1+w!%_vvfgrh1@qpd3'
