--- a/server/docker-compose.yaml
+++ b/server/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     restart: unless-stopped
     container_name: postgres
     env_file:
-      - .env
+      - .env.local
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
